fixed jumper buttons, added section headers

--- a/index.css
+++ b/index.css
@@ -163,13 +163,28 @@ nav div ul li:hover {
 
 }
 
-
 .section-header {
   text-align: left;
   margin: 10px 10px 5px 10px;
 }
 
 .section-header p{
+  display: inline;
+  position: relative;
+  bottom: 5px;
+  font-size: 16px;
+}
+
+.post-header {
+  position: relative;
+  left: -20px;
+  top: 5px;
+  padding: 5px;
+  display: block;
+  width: 50%;
+}
+
+.post-header p{
   display: inline;
   position: relative;
   bottom: 5px;
